--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -337,8 +337,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'list'>\n",
+      "[10, 20, 30, 40, 50]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List declaration\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "\n",
+    "print(numbers)\n",
+    "print(type(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bb2e3919-52b0-4dfe-bc9f-d0fa8a9110f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "10\n",
+      "20\n",
+      "40\n",
       "50\n",
       "1111111111111111111111111111\n",
       "\n",
@@ -351,25 +375,24 @@
     }
    ],
    "source": [
-    "# List declaration\n",
-    "numbers = [10, 20, 30, 40, 50]\n",
-    "print(type(numbers))\n",
-    "\n",
     "# Accessing elements\n",
-    "print(numbers[0])   # 10\n",
-    "print(numbers[-1])  # 50\n",
+    "print(numbers[0])   # prints 1st number in the list 10\n",
+    "print(numbers[1])   # prints 2nd number in the list 20\n",
+    "print(numbers[3])   # prints 4th number in the list 40\n",
+    "\n",
+    "print(numbers[-1])  # access last number 50\n",
     "print(\"1111111111111111111111111111\\n\")\n",
     "\n",
     "# Slicing\n",
-    "print(numbers[1:3])  # [20, 30]\n",
-    "print(numbers[:2])   # [10, 20]\n",
-    "print(numbers[2:])   # [30, 40, 50]\n",
+    "print(numbers[1:3])  # slice 2nd number to 3rd number: [20, 30]\n",
+    "print(numbers[:3])   # slice [10, 20, 30]\n",
+    "print(numbers[2:])   # slice from index 2 to last [30, 40, 50]\n",
     "print(\"222222222222222222222222222222\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "562fac51-7dc0-4f68-a053-bf8cd24f3e57",
    "metadata": {},
    "outputs": [
@@ -377,27 +400,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 20, 30, 40, 50, 60]\n",
-      "[10, 20, 25, 30, 40, 50, 60]\n",
-      "[10, 20, 25, 40, 50, 60]\n"
+      "numbers after append: [10, 20, 30, 40, 50, 15]\n",
+      "numbers after insert: [10, 20, 30, 25, 40, 50, 15]\n",
+      "numbers after remove: [10, 20, 30, 25, 40, 15]\n"
      ]
     }
    ],
    "source": [
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "\n",
     "# List modification\n",
-    "numbers.append(60)  # Adds 60 at the end\n",
-    "print(numbers)  # [10, 20, 30, 40, 50, 60]\n",
+    "numbers.append(15)  # Adds 15 at the end\n",
+    "print(f\"numbers after append: {numbers}\")  \n",
     "\n",
-    "numbers.insert(2, 25)  # Insert 25 at index 2\n",
-    "print(numbers)  # [10, 20, 25, 30, 40, 50, 60]\n",
+    "numbers.insert(3, 25)  # Insert 25 at index 3\n",
+    "print(f\"numbers after insert: {numbers}\")  \n",
     "\n",
-    "numbers.remove(30)  # Remove value 30\n",
-    "print(numbers)  # [10, 20, 25, 40, 50, 60]\n"
+    "numbers.remove(50)  # Remove value 50\n",
+    "print(f\"numbers after remove: {numbers}\")  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "dfe2d6a0-7f13-4a72-b2eb-7bbc3b4df582",
    "metadata": {},
    "outputs": [
@@ -405,30 +430,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After sort: [10, 20, 25, 40, 50, 60]\n",
-      "After reverse: [60, 50, 40, 25, 20, 10]\n",
-      "After list concatenation: [60, 50, 40, 25, 20, 10, 70, 80]\n",
-      "After list repetition: [60, 50, 40, 25, 20, 10, 60, 50, 40, 25, 20, 10]\n"
+      "After sort: [10, 15, 20, 25, 30, 40]\n",
+      "After reverse: [40, 30, 25, 20, 15, 10]\n"
      ]
     }
    ],
    "source": [
     "# Sorting\n",
     "numbers.sort()\n",
-    "print(f\"After sort: {numbers}\")  # [10, 20, 25, 40, 50, 60]\n",
+    "print(f\"After sort: {numbers}\")  \n",
     "\n",
     "# Reversing\n",
     "numbers.reverse()\n",
-    "print(f\"After reverse: {numbers}\")  # [60, 50, 40, 25, 20, 10]\n",
+    "print(f\"After reverse: {numbers}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9ea18133-605d-414d-8462-458905056ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After list concatenation: [10, 20, 30, 40, 50, 77, 88, 11]\n",
+      "After list repetition: [10, 20, 30, 40, 50, 10, 20, 30, 40, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [10, 20, 30, 40, 50]\n",
     "\n",
     "# List concatenation\n",
-    "more_numbers = [70, 80]\n",
+    "more_numbers = [77, 88, 11]\n",
     "new_numbers = numbers + more_numbers\n",
-    "print(f\"After list concatenation: {new_numbers}\")  # [60, 50, 40, 25, 20, 10, 70, 80]\n",
+    "print(f\"After list concatenation: {new_numbers}\")  \n",
     "\n",
     "# List repetition\n",
     "repeat_numbers = numbers * 2\n",
-    "print(f\"After list repetition: {repeat_numbers}\")  # [60, 50, 40, 25, 20, 10, 60, 50, 40, 25, 20, 10]"
+    "print(f\"After list repetition: {repeat_numbers}\")  "
    ]
   },
   {
@@ -730,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
