--- a/tut_py_3_for_ifelse.ipynb
+++ b/tut_py_3_for_ifelse.ipynb
@@ -56,7 +56,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
+   "id": "1518cbca-0181-4c16-938f-b6360303155e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in [0,1,2,3]:\n",
+    "    print(\"hello\")\n",
+    "    print(\"...sita\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "aba16346-771a-4a2a-8dc5-6e87edf04862",
    "metadata": {},
    "outputs": [
@@ -69,12 +96,41 @@
     }
    ],
    "source": [
-    "print(list(range(4)))"
+    "list_range = list(range(0,4))\n",
+    "print(list_range)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
+   "id": "ff0e2f01-0410-42c7-931b-777c8a588c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n",
+      "hello\n",
+      "...sita\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_range = list(range(0,4))\n",
+    "for i in list_range:\n",
+    "    print(\"hello\")\n",
+    "    print(\"...sita\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "825ec704-f4ec-41df-b0cd-c76bf9f8e5c8",
    "metadata": {},
    "outputs": [
@@ -83,19 +139,29 @@
      "output_type": "stream",
      "text": [
       "hello\n",
+      "...monica\n",
       "hello\n",
+      "...monica\n",
       "hello\n",
+      "...monica\n",
       "hello\n",
+      "...monica\n",
       "hello\n",
+      "...monica\n",
       "hello\n",
+      "...monica\n",
       "hello\n",
-      "hello\n"
+      "...monica\n",
+      "hello\n",
+      "...monica\n"
      ]
     }
    ],
    "source": [
-    "for i in range(8):\n",
-    "    print(\"hello\")"
+    "list_range = list(range(0,8))\n",
+    "for i in list_range:\n",
+    "    print(\"hello\")\n",
+    "    print(\"...monica\")"
    ]
   },
   {
@@ -216,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "9cff667a-8710-48b3-9cd4-2fd3abbcea05",
    "metadata": {},
    "outputs": [
@@ -224,13 +290,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is not less than 5\n"
+      "x is less than 5\n"
      ]
     }
    ],
    "source": [
-    "x = 7\n",
-    "y = 10\n",
+    "x = 2\n",
     "\n",
     "# if x is less than 5, print less that 5 , else print greater than\n",
     "if x < 5:\n",
@@ -241,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "98492e67-7dd9-4a18-b929-a68f2d6f13f0",
    "metadata": {},
    "outputs": [
@@ -276,6 +341,37 @@
     "else:\n",
     "    print(\"Grade: F\")\n",
     "    print(\"Buddy wake up. Start studying.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4bd387-5b56-4c76-b0fa-63e43ae599ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### FIX ME\n",
+    "# marks = 85\n",
+    "\n",
+    "# if 100 <= marks <= 90:\n",
+    "#     print(\"Grade: A\")\n",
+    "#     print(\"Congratulations. Your parents would be proud\")\n",
+    "    \n",
+    "# elif 90 < marks <= 80:\n",
+    "#     print(\"Grade: B\")\n",
+    "#     print(\"Good work\")\n",
+    "    \n",
+    "# elif 80 < marks <= 70:\n",
+    "#     print(\"Grade: C\")\n",
+    "#     print(\"Good work, but you can  do better\")\n",
+    "    \n",
+    "# elif 70 < marks <= 60:\n",
+    "#     print(\"Grade: D\")\n",
+    "#     print(\"Buddy whats going on ? I have confidence that u can do better\")\n",
+    "    \n",
+    "# else:\n",
+    "#     print(\"Grade: F\")\n",
+    "#     print(\"Buddy wake up. Start studying.\")\n"
    ]
   },
   {
