--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -23,10 +23,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'int'>\n",
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'complex'>\n"
+      "type of a is <class 'int'>\n",
+      "type of b is <class 'int'>\n",
+      "type of c is <class 'float'>\n",
+      "type of d is <class 'complex'>\n"
      ]
     }
    ],
@@ -35,10 +35,11 @@
     "b = 3\n",
     "c = 1.2\n",
     "d = 1+2j\n",
-    "print(type(a))\n",
-    "print(type(b))\n",
-    "print(type(c))\n",
-    "print(type(d))"
+    "\n",
+    "print(f\"type of a is {type(a)}\")\n",
+    "print(f\"type of b is {type(b)}\")\n",
+    "print(f\"type of c is {type(c)}\")\n",
+    "print(f\"type of d is {type(d)}\")\n"
    ]
   },
   {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e4f14afc-4aa4-463b-9b8d-d7b5d5b6dbda",
    "metadata": {},
    "outputs": [
@@ -59,9 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
-      "7\n",
-      "30\n",
+      "addition:13\n",
+      "subtraction: 7\n",
+      "muptiplication:30\n",
       "3.3333333333333335\n",
       "3\n",
       "1\n",
@@ -73,35 +74,20 @@
     "a = 10\n",
     "b = 3\n",
     "\n",
-    "print(a + b)   # Addition → 13\n",
-    "print(a - b)   # Subtraction → 7\n",
-    "print(a * b)   # Multiplication → 30\n",
+    "res_add = a + b\n",
+    "print(f\"addition:{res_add}\")   # Addition → 13\n",
+    "\n",
+    "res_sub = a - b\n",
+    "print(f\"subtraction: {res_sub}\")   # Subtraction → 7\n",
+    "\n",
+    "res_mult = a * b\n",
+    "print(f\"muptiplication:{res_mult}\")   # Multiplication → 30\n",
+    "\n",
+    "# I can perform calculation directly inside print method\n",
     "print(a / b)   # Division → 3.3333\n",
     "print(a // b)  # Floor Division → 3\n",
     "print(a % b)   # Modulus (Remainder) → 1\n",
     "print(a ** b)  # Exponentiation → 1000 (10^3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f031189b-24ac-4a89-aa09-c47eb8bfa4e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 4\n",
-    "y = 5\n",
-    "result = x*y\n",
-    "\n",
-    "print(result)"
    ]
   },
   {
@@ -234,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ef232980-ec92-45bf-b9c6-fc3af4c1b45e",
    "metadata": {},
    "outputs": [
@@ -243,6 +229,7 @@
      "output_type": "stream",
      "text": [
       "P\n",
+      "t\n",
       "n\n",
       "1111111111111111111111111111\n",
       "\n",
@@ -277,6 +264,7 @@
     "\n",
     "# Accessing elements\n",
     "print(s[0])    # 'P' (First character)\n",
+    "print(s[2])    # 't'\n",
     "print(s[-1])   # 'n' (Last character)\n",
     "print(\"1111111111111111111111111111\\n\")\n",
     "\n",
@@ -392,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "562fac51-7dc0-4f68-a053-bf8cd24f3e57",
    "metadata": {},
    "outputs": [
@@ -400,9 +388,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "numbers after append: [10, 20, 30, 40, 50, 15]\n",
-      "numbers after insert: [10, 20, 30, 25, 40, 50, 15]\n",
-      "numbers after remove: [10, 20, 30, 25, 40, 15]\n"
+      "numbers after append: [10, 20, 30, 40, 50, 17]\n",
+      "numbers after insert: [10, 20, 30, 25, 40, 50, 17]\n",
+      "numbers after remove: [10, 20, 30, 25, 40, 17]\n",
+      "numbers after insert in the begn: [-6, 10, 20, 30, 25, 40, 17]\n"
      ]
     }
    ],
@@ -410,19 +399,24 @@
     "numbers = [10, 20, 30, 40, 50]\n",
     "\n",
     "# List modification\n",
-    "numbers.append(15)  # Adds 15 at the end\n",
+    "numbers.append(17)  # Adds 17 at the end\n",
     "print(f\"numbers after append: {numbers}\")  \n",
     "\n",
     "numbers.insert(3, 25)  # Insert 25 at index 3\n",
     "print(f\"numbers after insert: {numbers}\")  \n",
     "\n",
     "numbers.remove(50)  # Remove value 50\n",
-    "print(f\"numbers after remove: {numbers}\")  "
+    "print(f\"numbers after remove: {numbers}\")  \n",
+    "\n",
+    "#########Assignemnt############\n",
+    "# How to put -6 in the begining of list ?\n",
+    "numbers.insert(0,-6)\n",
+    "print(f\"numbers after insert in the begn: {numbers}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "dfe2d6a0-7f13-4a72-b2eb-7bbc3b4df582",
    "metadata": {},
    "outputs": [
@@ -430,12 +424,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After sort: [10, 15, 20, 25, 30, 40]\n",
-      "After reverse: [40, 30, 25, 20, 15, 10]\n"
+      "After sort: [-6, 10, 17, 20, 25, 30, 40]\n",
+      "After reverse: [40, 30, 25, 20, 17, 10, -6]\n"
      ]
     }
    ],
    "source": [
+    "numbers = [-6, 10, 20, 30, 25, 40, 17]\n",
     "# Sorting\n",
     "numbers.sort()\n",
     "print(f\"After sort: {numbers}\")  \n",
@@ -471,6 +466,31 @@
     "# List repetition\n",
     "repeat_numbers = numbers * 2\n",
     "print(f\"After list repetition: {repeat_numbers}\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1dc9b447-4bed-4b90-bc37-ec216fb78d69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "range: [1, 4, 7, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets create a list of 10 consecutive int\n",
+    "l = list(range(1,11))\n",
+    "print(f\"range: {l}\")\n",
+    "\n",
+    "#lets create a list numbers starting with 1, skipping 3 values , and print upto 10\n",
+    "l_skip = list(range(1,11,3))\n",
+    "print(f\"range: {l_skip}\")"
    ]
   },
   {
@@ -601,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "b6b31aac-86d6-41cd-8071-cd1c7bc401d6",
    "metadata": {},
    "outputs": [
@@ -610,6 +630,7 @@
      "output_type": "stream",
      "text": [
       "numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "times3: [3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
       "squares: [1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
      ]
     }
@@ -622,8 +643,13 @@
     "print(f\"numbers: {numbers}\")\n",
     "\n",
     "# Create a list of squares from 1 to 10.\n",
+    "times3 = [x*3 for x in range(1, 11)]\n",
+    "print(f\"times3: {times3}\")\n",
+    "\n",
+    "# Create a list of squares from 1 to 10.\n",
     "squares = [x**2 for x in range(1, 11)]\n",
-    "print(f\"squares: {squares}\")"
+    "print(f\"squares: {squares}\")\n",
+    "\n"
    ]
   },
   {
@@ -772,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
