--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "1dffc368-8dca-42c1-9920-125c751d2529",
    "metadata": {},
    "outputs": [
@@ -33,14 +33,17 @@
     }
    ],
    "source": [
-    "student_scores = {\"Alice\": 85, \"Bob\": 92, \"Charlie\": 78}\n",
+    "student_scores = {\"Alice\": 85, \n",
+    "                  \"Bob\": 92, \n",
+    "                  \"Charlie\": 78\n",
+    "}\n",
     "\n",
     "print(student_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "ba1da969-6a07-4dc9-9cd7-f241a70d1377",
    "metadata": {},
    "outputs": [
@@ -54,7 +57,9 @@
     }
    ],
    "source": [
-    "student_scores = {\"Alice\": 85, \"Bob\": 92, \"Charlie\": 78}\n",
+    "student_scores = {\"Alice\": 85, \n",
+    "                  \"Bob\": 92,\n",
+    "                  \"Charlie\": 78}\n",
     "\n",
     "# Accessing values using keys\n",
     "print(student_scores[\"Alice\"])  # Output: 85\n",
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "d153e57d-89be-48f9-8dd3-65f7942c8df8",
    "metadata": {},
    "outputs": [
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "b9ce7070-cb13-406e-835d-3bf98753d0e3",
    "metadata": {},
    "outputs": [
@@ -100,6 +105,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e8a7999a-b8e9-4600-a1f7-9fdaae47c997",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John', 'age': 30, 'city': 'New York'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = dict(name=\"John\", \n",
+    "               age=30, \n",
+    "               city=\"New York\")\n",
+    "print(my_dict)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "477ce400-b749-4a71-8a9b-3cf8fb86d83e",
    "metadata": {},
@@ -110,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "4b035212-e669-4f6c-bed7-bc4f4072f7cd",
    "metadata": {},
    "outputs": [
@@ -118,15 +144,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice': 90, 'Bob': 92, 'Charlie': 78, 'David': 88}\n"
+      "after adding:{'Alice': 85, 'Bob': 92, 'Charlie': 78, 'David': 88}\n",
+      "after update:{'Alice': 90, 'Bob': 92, 'Charlie': 78, 'David': 88}\n"
      ]
     }
    ],
    "source": [
     "student_scores[\"David\"] = 88  # Adding new key-value pair\n",
-    "student_scores[\"Alice\"] = 90  # Updating value\n",
+    "print(f\"after adding:{student_scores}\")\n",
     "\n",
-    "print(student_scores)"
+    "student_scores[\"Alice\"] = 90  # Updating value\n",
+    "print(f\"after update:{student_scores}\")\n"
    ]
   },
   {
@@ -254,14 +282,37 @@
    "id": "3cc5089a-2ef0-4562-af00-8768c4dc0e02",
    "metadata": {},
    "source": [
-    "### 7️. Nested Dictionary (Dictionary Inside a Dictionary)\n",
+    "### 7️. Nested Dictionary (List or Dictionary Inside a Dictionary)\n",
     "Scenario: Storing student information including multiple details."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "50a62c0f-d2f9-4be9-af85-0a8cd64d4d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': [50, 1.7, 'Kerala'], 'bob': [43, 1.3, 'Delhi'], 'Charlie': [32, 1.8, 'noida']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = { # key=name, value=[age,height,location]\n",
+    "    \"Alice\":  [50,1.7,\"Kerala\"],\n",
+    "    \"bob\"  :  [43,1.3,\"Delhi\"],\n",
+    "    \"Charlie\":[32, 1.8, \"noida\"]\n",
+    "}\n",
+    "print(students)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5a90230f-fdf8-41c3-a1e0-305d69f1f2e4",
    "metadata": {},
    "outputs": [
     {
@@ -273,6 +324,7 @@
     }
    ],
    "source": [
+    "\n",
     "students = {\n",
     "    \"Alice\": {\"age\": 20, \"grade\": \"A\"},\n",
     "    \"Bob\": {\"age\": 22, \"grade\": \"B\"},\n",
